# ciscosupportsdk

./: .gitignore  LICENSE.txt  README.rst  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs_pages.yaml  docs_to_pages.yaml  release.yaml  test.yaml
_sources/api/: ciscosupportsdk.rst.txt
api/: ciscosupportsdk.html
docs/: conf.py  index.rst
examples/: README.rst  bug.py  case.py  eox.py  product_info.py  rma.py  sn_to_info.py  suggestion.py
src/ciscosupportsdk/: apisession.py  validate.py
src/ciscosupportsdk/api/: __init__.py  asd.py  bug.py  case.py  eox.py  productinformation.py  serialnumbertoinformation.py  serviceorderreturn.py  softwaresuggestion.py
src/ciscosupportsdk/models/: bug.py  case.py  common.py  eox.py  productinformation.py  serialnumbertoinformation.py  serviceorderreturn.py  softwaresuggestion.py
tests/cassettes/apisession_test/: TestApiSession.test_api_error.yaml  TestApiSession.test_auth_failure.yaml  TestApiSession.test_auth_success.yaml
tests/cassettes/bug_test/: TestBugApi.test_get_bug_details.yaml  TestBugApi.test_get_bugs_by_keyword.yaml  TestBugApi.test_get_bugs_by_product_and_affected_release.yaml  TestBugApi.test_get_bugs_by_product_and_fixed_release.yaml  TestBugApi.test_get_bugs_by_product_id.yaml  TestBugApi.test_get_bugs_by_product_id_and_release.yaml  TestBugApi.test_get_bugs_by_product_name_and_affected_release.yaml  TestBugApi.test_get_bugs_by_product_name_and_fixed_release.yaml
tests/cassettes/case_test/: TestCaseApi.test_cases_by_user_id.yaml  TestCaseApi.test_get_case_details.yaml  TestCaseApi.test_get_case_summary.yaml  TestCaseApi.test_get_cases_by_contract_id.yaml
tests/cassettes/eox_test/: TestEoxApi.test_eox_error.yaml  TestEoxApi.test_get_by_dates.yaml  TestEoxApi.test_get_by_product_ids.yaml  TestEoxApi.test_get_by_serial_number.yaml  TestEoxApi.test_get_by_software_release.yaml
tests/cassettes/rma_test/: TestRmaApi.test_raise_api_error.yaml  TestRmaApi.test_rma_by_user_id.yaml  TestRmaApi.test_rma_by_user_id_fail.yaml  TestRmaApi.test_rma_details.yaml
tests/cassettes/sn_to_info_test/: TestSerialNumberToInfoApi.test_get_coverage_owner_status.yaml  TestSerialNumberToInfoApi.test_get_coverage_status.yaml  TestSerialNumberToInfoApi.test_get_coverage_summary_by_serial.yaml  TestSerialNumberToInfoApi.test_get_orderable_pids.yaml
tests/ciscosupportsdk/: apisession_test.py  fixtures.py  validate_test.py
tests/ciscosupportsdk/api/: bug_test.py  case_test.py  eox_test.py  rma_test.py  sn_to_info_test.py
